syntax = "proto3";
package smarshallspitzbart.ride.ride;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "ride/params.proto";
import "ride/next_ride.proto";
import "ride/stored_ride.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/smarshall-spitzbart/ride/x/ride/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/smarshall-spitzbart/ride/ride/params";
  }
  // Queries a NextRide by index.
	rpc NextRide(QueryGetNextRideRequest) returns (QueryGetNextRideResponse) {
		option (google.api.http).get = "/smarshall-spitzbart/ride/ride/next_ride";
	}
// Queries a StoredRide by index.
	rpc StoredRide(QueryGetStoredRideRequest) returns (QueryGetStoredRideResponse) {
		option (google.api.http).get = "/smarshall-spitzbart/ride/ride/stored_ride/{index}";
	}

	// Queries a list of StoredRide items.
	rpc StoredRideAll(QueryAllStoredRideRequest) returns (QueryAllStoredRideResponse) {
		option (google.api.http).get = "/smarshall-spitzbart/ride/ride/stored_ride";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetNextRideRequest {}

message QueryGetNextRideResponse {
	NextRide NextRide = 1 [(gogoproto.nullable) = false];
}
message QueryGetStoredRideRequest {
	  string index = 1;

}

message QueryGetStoredRideResponse {
	StoredRide storedRide = 1 [(gogoproto.nullable) = false];
}

message QueryAllStoredRideRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllStoredRideResponse {
	repeated StoredRide storedRide = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
