syntax = "proto3";
package smarshallspitzbart.ride.ride;

option go_package = "github.com/smarshall-spitzbart/ride/x/ride/types";

message RatingStruct {
  string index = 1; 
  float rating = 2; 
  
}

